--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,10 @@ torchvision==0.20.0
 torchaudio==2.5.0
 
 --index-url https://pypi.org/simple
-unsloth[cu121-torch250] @ git+https://github.com/unslothai/unsloth.git
 opencv-python-headless
 Pillow
 googletrans==3.1.0a0
+moviepy==2.0.0.dev2
+scenedetect[opencv-headless]
 tqdm
-streamlit
-timm
-einops
+openai-whisper
