feat: Add scene weight to rankfusion

--- a/config/clip_config.yaml
+++ b/config/clip_config.yaml
@@ -1,5 +1,5 @@
 model_name: "ViT-L/14@336px" # ['RN50', 'RN101', 'RN50x4', 'RN50x16', 'RN50x64', 'ViT-B/32', 'ViT-B/16', 'ViT-L/14', 'ViT-L/14@336px']
-frame_folder: "test_dataset_79"
+frame_folder: "datasets/test_dataset_79"
 output_file: "output/frame_vectors.pt"
 image_extensions:
   - ".jpg"
