--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
+--index-url https://pypi.org/simple
+--extra-index-url https://download.pytorch.org/whl/cu121
+
 PyYAML
---index-url https://download.pytorch.org/whl/cu121
 torch==2.5.0
 torchvision==0.20.0
 torchaudio==2.5.0
 
---index-url https://pypi.org/simple
 opencv-python-headless
 Pillow
 googletrans==3.1.0a0
 scenedetect[opencv-headless]
 tqdm
 openai-whisper
-transformers==4.40.0
+git+https://github.com/huggingface/transformers
 sentencepiece
 protobuf
 easydict
@@ -20,16 +21,14 @@ timm
 einops
 peft==0.5.0
 streamlit
-
 git+https://github.com/LLaVA-VL/LLaVA-NeXT.git
-
 av
 imageio
-
 pydub
 librosa
 soundfile
-
 git+https://github.com/openai/CLIP.git
-
 deepl
+opencv-python
+accelerate
+qwen-vl-utils[decord]==0.0.8
