--- a/config/video_retrieval_config.yaml
+++ b/config/video_retrieval_config.yaml
@@ -14,7 +14,7 @@ bge-script:
 #### Image Retrieval ####
 
 common: &common_settings
-  image_folder: "/data/ephemeral/home/junhan_blip2_streamlit/full_frames"
+  image_folder: "./frames_1500_fps10"
   image_extensions:
     - ".jpg"
     - ".jpeg"
@@ -23,9 +23,9 @@ common: &common_settings
 clip:
   <<: *common_settings
   model_name: "ViT-L/14@336px"  # ['RN50', 'RN101', 'RN50x4', 'RN50x16', 'RN50x64', 'ViT-B/32', 'ViT-B/16', 'ViT-L/14', 'ViT-L/14@336px']
-  embedding_file: "embeddings/clip_image_embeddings_22.pt"
+  embedding_file: "embeddings/clip_image_embeddings_1500.pt"
 
 blip:
   <<: *common_settings
   model_type: "pretrain"  # 또는 "coco" 등 사용 사례에 맞게 지정
-  embedding_file: "embeddings/blip_image_embeddings_22.pt"
+  embedding_file: "embeddings/blip_image_embeddings_1500.pt"
