--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,7 @@ PyYAML
 salesforce-lavis
 opencv-python-headless
 faiss-cpu
+scikit-learn
+opencv-python 
 git+https://github.com/openai/CLIP.git
+googletrans==4.0.0-rc1
