--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 torch
-transformers
+# transformers
 Pillow
 pandas
 matplotlib
@@ -10,4 +10,6 @@ faiss-cpu
 scikit-learn
 opencv-python 
 git+https://github.com/openai/CLIP.git
+deepl
 googletrans==4.0.0-rc1
+timm==1.0.13
