--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,9 @@ opencv-python
 git+https://github.com/openai/CLIP.git
 deepl
 googletrans==4.0.0-rc1
-# timm==1.0.13
+wordfreq
+qwen-vl-utils[decord]==0.0.8
+sentence_transformers
+git+https://github.com/huggingface/transformers
+accelerate
+timm==1.0.13
